--- a/student.html
+++ b/student.html
@@ -83,13 +83,14 @@
         <a href="propartylist.html" class="hover:text-orange-500 transition"
           >Property</a
         >
+                <a href="#" class="text-orange-600 font-semibold transition"
+          >Student Corner</a
+        >
+        <a href="#" class="hover:text-orange-500 transition">Real Estate</a>
         <a href="service.html" class="hover:text-orange-500 transition"
           >Service</a
         >
-        <a href="#" class="hover:text-orange-500 transition">Real Estate</a>
-        <a href="#" class="text-orange-600 font-semibold transition"
-          >Student Corner</a
-        >
+
       </nav>
       <a href="profile.html" class="hidden md:inline-block">
         <img
@@ -1251,7 +1252,7 @@
     <script>
       function scrollContainer(id, direction) {
         const container = document.getElementById(id);
-        const scrollAmount = 300; // Adjust scroll distance as needed
+        const scrollAmount = 300;
         container.scrollBy({
           left: direction * scrollAmount,
           behavior: "smooth",
