--- a/student.html
+++ b/student.html
@@ -79,18 +79,13 @@
         <span class="text-orange-600 font-bold text-xl">Barivara.com</span>
       </div>
       <nav class="hidden md:flex space-x-6 text-gray-700 font-medium">
-        <a href="#" class="hover:text-orange-500 transition">Home</a>
-        <a href="propartylist.html" class="hover:text-orange-500 transition"
-          >Property</a
-        >
-                <a href="#" class="text-orange-600 font-semibold transition"
-          >Student Corner</a
-        >
-        <a href="#" class="hover:text-orange-500 transition">Real Estate</a>
-        <a href="service.html" class="hover:text-orange-500 transition"
-          >Service</a
-        >
-
+        <a href="home.html" class="hover:text-orange-500 transition">Home</a>
+         <a href="propartylist.html" class="hover:text-orange-500 transition">Property</a>
+          <a href="" class="hover:text-orange-500 transition">Student Corner</a>
+          <a href="realEstate.html" class="hover:text-orange-500 transition">Real Estate</a>
+        <a href="service.html" class="hover:text-orange-500 transition">Service</a>
+       
+        
       </nav>
       <a href="profile.html" class="hidden md:inline-block">
         <img
