--- a/home.html
+++ b/home.html
@@ -37,9 +37,11 @@
       <nav class="hidden md:flex space-x-6 text-gray-700 font-medium">
         <a href="#" class="hover:text-orange-500 transition">Home</a>
          <a href="propartylist.html" class="hover:text-orange-500 transition">Property</a>
+          <a href="student.html" class="hover:text-orange-500 transition">Student Corner</a>
+          <a href="realEstate.html" class="hover:text-orange-500 transition">Real Estate</a>
         <a href="service.html" class="hover:text-orange-500 transition">Service</a>
        
-        <a href="#" class="hover:text-orange-500 transition">Real Estate</a>
+        
       </nav>
 
       <!-- Mobile Menu Button -->
