--- a/service.html
+++ b/service.html
@@ -36,17 +36,16 @@
 
       <!-- Desktop Menu -->
       <nav class="hidden md:flex space-x-6 text-gray-700 font-medium">
-        <a href="#" class="hover:text-orange-500 transition">Home</a>
-        <a
-          href="#"
-          class="text-orange-600 font-semibold underline"
-          aria-current="page"
-          >Service</a
+        <a href="home.html" class="hover:text-orange-500 transition">Home</a>
+        <a href="propartylist.html" class="hover:text-orange-500 transition"
+          >Property</a
         >
-        <a href="#" class="hover:text-orange-500 transition">Property</a>
-        <a href="#" class="hover:text-orange-500 transition">Contact</a>
+        <a href="student.html" class="hover:text-orange-500 transition"
+          >Student Corner</a
+        >
+        <a href="#" class="hover:text-orange-500 transition">Real Estate</a>
+        <a href="" class="hover:text-orange-500 transition">Service</a>
       </nav>
-
       <!-- Mobile Menu Button -->
       <div class="md:hidden">
         <button
